# ORE

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  artifact-schema.md  foundation.md  interface-lock.md  invariants.md  roadmap.md  skills.md  v1-upgrade-plan.md
ore/: __init__.py  _version.py  cli.py  core.py  gate.py  models.py  reasoner.py  reasoner_deepseek.py  router.py  skills.py  store.py  tools.py  types.py
ore/prompts/: aya.txt
skills/pirate/: SKILL.md
tests/: conftest.py  test_cli.py  test_core.py  test_gate.py  test_models.py  test_reasoner.py  test_reasoner_deepseek.py  test_router.py  test_skills.py  test_store.py  test_surface.py  test_tools.py  test_types.py
